2011-08-31  Dan Bernstein  <mitz@apple.com>

        Refined the heuristic introduced to fix <rdar://problem/10002140> Text gets clipped in
        multi-column layouts when overflow:auto is used.
        https://bugs.webkit.org/show_bug.cgi?id=67212

        Reviewed by Dave Hyatt.

        Test: fast/multicol/overflow-across-columns-percent-height.html

        * rendering/RenderBox.cpp:
        (WebCore::percentageLogicalHeightIsResolvable): Added. This follows logic similar to the one
        in computePercentageLogicalHeight() to determine whether percentage values for height properties
        are resolved or treated as "auto".
        (WebCore::RenderBox::hasUnsplittableScrollingOverflow): If min-height or max-height are specified
        as a percentage but actually resolve to "auto", don’t let that prevent splitting.

2011-08-31  Ryosuke Niwa  <rniwa@webkit.org>

        Move text() and textWithHardLineBreaks() from RenderTextControl to HTMLTextFormControlElement
        https://bugs.webkit.org/show_bug.cgi?id=67320

        Reviewed by Darin Adler.

        Moved and renamed RenderText::text and RenderText::textWithHardLineBreaks to
        HTMLTextFormControlElement::innerTextValue and HTMLTextFormControlElement::valueWithHardLineBreaks.

        * accessibility/AccessibilityRenderObject.cpp:
        (WebCore::AccessibilityRenderObject::text):
        * html/HTMLInputElement.cpp:
        (WebCore::HTMLInputElement::subtreeHasChanged):
        * html/HTMLTextAreaElement.cpp:
        (WebCore::HTMLTextAreaElement::appendFormData): Calls valueWithHardLineBreaks. It doesn't have to check
        the existence of renderer anymore because valueWithHardLineBreaks returns value() when renderer do not
        exist unlike RenderText::textWithHardLineBreaks returned emptyString() in such cases. This is the only place
        valueWithHardLineBreaks is ever called; but we can't move valueWithHardLineBreaks because it calls
        finishText.