@@ -1,3 +1,14 @@
+2011-08-31  Pratik Solanki  <psolanki@apple.com>
+
+        Fix compile issues when enabling HAVE(CFNETWORK_DATA_ARRAY_CALLBACK)
+        https://bugs.webkit.org/show_bug.cgi?id=67332
+
+        Reviewed by Darin Adler.
+
+        * loader/mac/ResourceLoaderMac.mm:
+        (WebCore::ResourceLoader::didReceiveDataArray):
+        * platform/network/cf/ResourceHandleCFNet.cpp:
+
 2011-08-31  Dan Bernstein  <mitz@apple.com>
 
         Refined the heuristic introduced to fix <rdar://problem/10002140> Text gets clipped in
